--- a/src/main/resources/ro/cofi/relicdb/main-view.fxml
+++ b/src/main/resources/ro/cofi/relicdb/main-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
-<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="354.0" prefWidth="688.0"
+<Pane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="464.0" prefWidth="778.0"
       xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="ro.cofi.relicdb.RelicDBController">
     <AnchorPane fx:id="dbVersionPane" layoutY="-1.0" minHeight="0.0" minWidth="0.0" prefHeight="40.0" prefWidth="688.0">
@@ -28,63 +28,86 @@
         <Button fx:id="dbVersionExplorerButton" layoutX="434.0" layoutY="6.0" mnemonicParsing="false"
                 text="OPEN IN EXPLORER"/>
     </AnchorPane>
-    <AnchorPane fx:id="analysisPane" layoutY="70.0" prefHeight="284.0" prefWidth="688.0">
+    <AnchorPane fx:id="analysisPane" layoutY="70.0" prefHeight="396.0" prefWidth="778.0">
         <Label layoutX="5.0" layoutY="4.0" text="Relic Type">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputRelicType" layoutX="103.0" layoutY="5.0" prefWidth="150.0"/>
+        <ChoiceBox fx:id="inputRelicType" layoutX="130.0" layoutY="5.0" prefWidth="150.0"/>
         <Label layoutX="5.0" layoutY="31.0" text="Relic Part">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputRelicPart" layoutX="103.0" layoutY="32.0" prefWidth="150.0"/>
-        <Label layoutX="5.0" layoutY="58.0" text="Relic Name">
+        <ChoiceBox fx:id="inputRelicPart" layoutX="130.0" layoutY="32.0" prefWidth="150.0"/>
+        <Label layoutX="5.0" layoutY="58.0" text="Set Name">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputrelicName" layoutX="103.0" layoutY="59.0" prefWidth="150.0"/>
+        <ChoiceBox fx:id="inputSetName" layoutX="130.0" layoutY="59.0" prefWidth="150.0"/>
         <Label layoutX="5.0" layoutY="85.0" text="Main Stat">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputMainStat" layoutX="103.0" layoutY="86.0" prefWidth="150.0"/>
+        <ChoiceBox fx:id="inputMainStat" layoutX="130.0" layoutY="86.0" prefWidth="150.0"/>
         <Label layoutX="5.0" layoutY="112.0" text="Substat 1">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputSubstat1" layoutX="103.0" layoutY="113.0" prefWidth="150.0"/>
+        <ChoiceBox fx:id="inputSubstat1" layoutX="130.0" layoutY="113.0" prefWidth="150.0"/>
         <Label layoutX="5.0" layoutY="139.0" text="Substat 2">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputSubstat2" layoutX="103.0" layoutY="140.0" prefWidth="150.0"/>
+        <ChoiceBox fx:id="inputSubstat2" layoutX="130.0" layoutY="140.0" prefWidth="150.0"/>
         <Label layoutX="5.0" layoutY="166.0" text="Substat 3">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputSubstat3" layoutX="103.0" layoutY="167.0" prefWidth="150.0"/>
+        <ChoiceBox fx:id="inputSubstat3" layoutX="130.0" layoutY="167.0" prefWidth="150.0"/>
         <Label layoutX="5.0" layoutY="193.0" text="Substat 4">
             <font>
                 <Font name="System Bold" size="18.0"/>
             </font>
         </Label>
-        <ChoiceBox fx:id="inputSubstat4" layoutX="103.0" layoutY="194.0" prefWidth="150.0"/>
-        <Button fx:id="analysisButton" layoutX="92.0" layoutY="239.0" mnemonicParsing="false" text="ANALYZE">
+        <ChoiceBox fx:id="inputSubstat4" layoutX="130.0" layoutY="194.0" prefWidth="150.0"/>
+        <Label layoutX="75.0" layoutY="223.0" text="Minimum Filters" textAlignment="CENTER">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <Label layoutX="5.0" layoutY="253.0" text="Set Rank">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <ChoiceBox fx:id="filterSetScore" layoutX="130.0" layoutY="254.0" prefWidth="150.0"/>
+        <Label layoutX="5.0" layoutY="280.0" text="Main Stat Rank">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <ChoiceBox fx:id="filterMainStatScore" layoutX="130.0" layoutY="281.0" prefWidth="150.0"/>
+        <Label layoutX="5.0" layoutY="307.0" text="Substat count">
+            <font>
+                <Font size="18.0"/>
+            </font>
+        </Label>
+        <ChoiceBox fx:id="filterSubStatCount" layoutX="130.0" layoutY="308.0" prefWidth="150.0"/>
+        <Button fx:id="analysisButton" layoutX="105.0" layoutY="352.0" mnemonicParsing="false" text="ANALYZE">
             <font>
                 <Font name="System Bold" size="12.0"/>
             </font>
         </Button>
-        <WebView layoutX="264.0" layoutY="5.0" prefHeight="266.0" prefWidth="413.0"/>
+        <WebView fx:id="analysisResult" layoutX="290.0" layoutY="5.0" prefHeight="381.0" prefWidth="476.0"/>
     </AnchorPane>
-    <Separator layoutY="37.0" prefHeight="4.0" prefWidth="688.0"/>
+    <Separator layoutY="37.0" prefHeight="5.0" prefWidth="772.0"/>
     <ProgressIndicator fx:id="dbVersionProgress" layoutX="565.0" layoutY="5.0" prefHeight="25.0" prefWidth="23.0"/>
-    <ProgressIndicator fx:id="analysisProgress" layoutX="172.0" layoutY="309.0" prefHeight="25.0" prefWidth="23.0"/>
+    <ProgressIndicator fx:id="analysisProgress" layoutX="185.0" layoutY="422.0" prefHeight="25.0" prefWidth="23.0"/>
 </Pane>
